# TMJRegistration

./: .gitignore  ALGORITHM.md  CMakeLists.txt  CONFIGURATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.ps1  build.sh  test_registration.ps1  完整编译并测试过程.md
config/: Affine.json  Rigid+Affine.json  Rigid.json
include/: ConfigManager.h  ImageRegistration.h  MattesMutualInformation.h  RegularStepGradientDescentOptimizer.h
src/: ConfigManager.cpp  ImageRegistration.cpp  MattesMutualInformation.cpp  RegularStepGradientDescentOptimizer.cpp  main.cpp
